Update and rename index.html to index.html

--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@ READ THIS FOR SUCCESS IN LIFE AND THIS CODE CHALLENGE :: Copy and paste the code
   <head>
   	<title>CSS Floats</title>
 
-  	<!-- Ahem...this is where you'll put your CSS!-->
-  	<style>
+  	<head>
+  	<title>CSS Floats</title>
   		body {
   			padding: 0;
-  			margin: 0;
-  		}
-  		header, footer {
-  			text-align: center;
-  			background-color: #000;
-  			color: #fff;
+  <style>
+  		body{
+  		padding: 0;
+margin:0;
+  		 }
+  			header,footer{ 
+  						text-align: center;
+  		  			background-color: #000;
+	color: #fff;
   			padding: 50px 0;
-  		}
+  				}
   		section {
-  			width: 80%;
-  			margin: 50px auto;
-  		}
-
-      .clear {
+	width: 80%;
+    margin: 50px auto;
         clear: both;
       }
 
